--- a/payeredge.html
+++ b/payeredge.html
@@ -13,10 +13,10 @@
       --tier-best:#ffd166;--tier-better:#a9c2ff;--tier-good:#7be0c3;
       --shadow-lg:0 18px 40px rgba(0,0,0,.35);--shadow-md:0 10px 26px rgba(0,0,0,.28);
       --radius:18px;
-      /* unified column geometry */
-      --w-item:34%;
-      --w-code:14%;
-      --w-money:17%;
+      /* adjusted column geometry to prevent code cutoffs */
+      --w-item:32%;
+      --w-code:20%;
+      --w-money:16%;
     }
     *{box-sizing:border-box} html,body{height:100%}
     body{
@@ -65,14 +65,23 @@
     .bundle col:nth-child(5){width:var(--w-money)}
     .cell-item{line-height:1.32;padding-bottom:2px}
     .cell-item .label{display:-webkit-box;-webkit-line-clamp:3;-webkit-box-orient:vertical;overflow:hidden;font-size:.95em}
-    .cell-code{white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+    /* FIX: allow codes to wrap and show fully */
+    .cell-code{
+      white-space:normal;
+      overflow:visible;
+      text-overflow:clip;
+      word-break:break-word;
+      font-family:ui-monospace,Menlo,Consolas,monospace;
+      font-size:12px;
+      line-height:1.3;
+    }
     .cell-money{
       white-space:nowrap;font-weight:800;text-align:right;
       font-size:clamp(11px,1.05vw,13px);
       font-variant-numeric:tabular-nums;
       padding-left:16px;padding-right:6px;
       overflow:visible;text-overflow:clip;
-      min-width:120px;
+      min-width:110px; /* slightly reduced to free space for Code */
     }
     .bundle td:nth-child(3), .bundle th:nth-child(3),
     .bundle td:nth-child(4), .bundle th:nth-child(4),
